--- a/api/package.json
+++ b/api/package.json
@@ -3,7 +3,7 @@
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "devStart": "nodemon server.js"
   },
   "keywords": [],
   "author": "",
@@ -12,7 +12,7 @@
   "dependencies": {
     "argon2": "^0.28.5",
     "express": "^4.18.1",
-    "mongoose": "^6.3.2",
+    "mongoose": "^6.3.8",
     "nodemon": "^2.0.16"
   }
 }
