--- a/api/package.json
+++ b/api/package.json
@@ -11,8 +11,11 @@
   "description": "",
   "dependencies": {
     "argon2": "^0.28.5",
+    "bcrypt": "^5.0.1",
     "express": "^4.18.1",
+    "jsonwebtoken": "^8.5.1",
     "mongoose": "^6.3.8",
-    "nodemon": "^2.0.16"
+    "nodemon": "^2.0.16",
+    "validator": "^13.7.0"
   }
 }
