--- a/api/package.json
+++ b/api/package.json
@@ -12,7 +12,9 @@
   "dependencies": {
     "argon2": "^0.28.5",
     "bcrypt": "^5.0.1",
+    "dotenv": "^16.0.1",
     "express": "^4.18.1",
+    "http-status": "^1.5.2",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^6.3.8",
     "nodemon": "^2.0.16",
