--- a/api/.env
+++ b/api/.env
@@ -1,1 +1,3 @@
-SECRET = "j8iv9axswaZJHDXpYAKX9w=="
+SECRET = "sjkflj2324--1FJKd"
+DB_CONNECTION = "mongodb://localhost:27017/testdb"
+PORT = "8080"
