--- a/api/package.json
+++ b/api/package.json
@@ -3,21 +3,17 @@
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
-    "devStart": "nodemon server.js"
+    "start": "nodemon server.js"
   },
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
-  "description": "",
   "dependencies": {
-    "argon2": "^0.28.5",
     "bcrypt": "^5.0.1",
+    "cors": "^2.8.5",
     "dotenv": "^16.0.1",
     "express": "^4.18.1",
     "http-status": "^1.5.2",
+    "joi": "^17.6.0",
     "jsonwebtoken": "^8.5.1",
-    "mongoose": "^6.3.8",
-    "nodemon": "^2.0.16",
-    "validator": "^13.7.0"
+    "mongoose": "^6.4.0",
+    "nodemon": "^2.0.16"
   }
 }
