--- a/client/package.json
+++ b/client/package.json
@@ -7,13 +7,14 @@
     "@testing-library/jest-dom": "^5.16.4",
     "@testing-library/react": "^13.3.0",
     "@testing-library/user-event": "^13.5.0",
+    "axios": "^0.27.2",
     "dotenv": "^16.0.1",
     "react": "^18.1.0",
     "react-beautiful-dnd": "^13.1.0",
     "react-dom": "^18.1.0",
     "react-icons": "^4.4.0",
     "react-router-dom": "^6.3.0",
-    "react-scripts": "5.0.1",
+    "react-scripts": "^5.0.1",
     "sass": "^1.52.3",
     "web-vitals": "^2.1.4"
   },
@@ -43,7 +44,7 @@
       "last 1 safari version"
     ]
   },
-  "homepage": "http://Alike04.github.io/CA_IA/home",
+  "homepage": "http://Alike04.github.io/home",
   "devDependencies": {
     "autoprefixer": "^10.4.7",
     "gh-pages": "^4.0.0",
