--- a/client/package.json
+++ b/client/package.json
@@ -3,18 +3,23 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@headlessui/react": "^1.6.4",
+    "@reduxjs/toolkit": "^1.8.6",
     "@testing-library/jest-dom": "^5.16.4",
     "@testing-library/react": "^13.3.0",
     "@testing-library/user-event": "^13.5.0",
     "axios": "^0.27.2",
     "dotenv": "^16.0.1",
+    "nanoid": "^4.0.0",
     "react": "^18.1.0",
-    "react-beautiful-dnd": "^13.1.0",
+    "react-beautiful-dnd": "^13.1.1",
+    "react-calendar": "^3.7.0",
     "react-dom": "^18.1.0",
     "react-icons": "^4.4.0",
+    "react-redux": "^8.0.4",
     "react-router-dom": "^6.3.0",
     "react-scripts": "^5.0.1",
+    "redux": "^4.2.0",
+    "rxjs": "^7.5.6",
     "sass": "^1.52.3",
     "web-vitals": "^2.1.4"
   },
@@ -44,7 +49,7 @@
       "last 1 safari version"
     ]
   },
-  "homepage": "http://Alike04.github.io/home",
+  "homepage": "http://Alike04.github.io",
   "devDependencies": {
     "autoprefixer": "^10.4.7",
     "gh-pages": "^4.0.0",
